# EasyCoding

./: .env  CLAUDE.md  PRD.md  README.md  impl.md
backend/: .env.example  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/agent/: __init__.py  context.py  loop.py  subagent.py
backend/agent/providers/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  factory.py  fallback_provider.py  gemini_provider.py  openai_compat_provider.py  registry.py
backend/agent/tools/: __init__.py  base.py  bash.py  file_read.py  file_write.py  git.py  glob.py  grep.py  loader.py  registry.py
backend/api/dto/: chat_dto.py  git.py  session_dto.py  task_dto.py  workspace.py
backend/api/routes/: __init__.py  channel.py  chat.py  git.py  health.py  memory.py  session.py  task.py  workspace.py
backend/bus/: __init__.py  queue.py
backend/command/: router.py
backend/domain/models/: command.py  session.py  task.py  workspace.py
backend/domain/ports/: __init__.py  ichannel.py
backend/infrastructure/adapters/: __init__.py  channel_dispatcher.py  discord_adapter.py  slack_adapter.py  telegram_adapter.py
backend/infrastructure/storage/: __init__.py  session_file_store.py  session_manager.py  task_queue_store.py  workspace_store.py
backend/services/: agent_service.py  changelog_service.py  chat_service.py  evaluator_agent.py  git_service.py  llm_service.py  memory_service.py  notification_service.py  pr_service.py
backend/tests/: conftest.py  test_context.py  test_sample.py
backend/trigger/: __init__.py
cli/: package-lock.json  (+3 more)
(+21 files in other folders)
